# Medical_Assistant_rag

./: .gitattributes  Dockerfile  README.md  pyproject.toml
backend/: app.py
ui/: index.html
utils/: llm_client.py
vector_db/: chroma.sqlite3  embedding_gen.py
vector_db/a0cbad7f-8a19-481f-b9d0-68e9d028ea7f/: index_metadata.pickle
