[project]
name = "medical-assistant-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "huggingface-hub>=1.18.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "llama-cpp-python>=0.3.26",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
]
